Added some partials (including a footer_

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -25,7 +25,7 @@ section{
 	/* Links */
 	
 a {
-	color: # 09c;
+	color: #09c;
 	text-decoration: none;
 }
 
@@ -90,4 +90,17 @@ a.signup_button { margin-left: auto;
 .round { -moz-border-radius: 10px;
 	-webkit-border-radius: 10px; 
 	border-radius:	10px;
+}
+
+/* Footer */
+
+footer {
+text-align: center; 
+margin-top: 10px; 
+width: 710px; 
+margin-left: auto; 
+margin-right: auto;
+}
+footer nav{ 
+	float: none;
 }
